--- a/Angular-Components/UpSkillUi/src/index.html
+++ b/Angular-Components/UpSkillUi/src/index.html
@@ -25,6 +25,9 @@
   <script src="https://web-chat.nativechat.com/3.3.2/sdk/nativechat.js"></script>
   <link href="https://web-chat.nativechat.com/3.3.2/sdk/nativechat.css" rel="stylesheet" type="text/css">
 
+  <!-- ------slider------ -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Nabla&display=swap');
 
@@ -48,6 +51,11 @@
 
 <body>
   <app-root></app-root>
+
+
+<!-- ----slider---- -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+
 
   <!-- chatbot -->
 
