--- a/Angular-Components/UpSkillUi/src/index.html
+++ b/Angular-Components/UpSkillUi/src/index.html
@@ -6,7 +6,7 @@
   <title>UpSkillUi</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/images/bar-chart-white.svg">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
@@ -26,26 +26,25 @@
   <link href="https://web-chat.nativechat.com/3.3.2/sdk/nativechat.css" rel="stylesheet" type="text/css">
 
   <!-- ------slider------ -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Nabla&display=swap');
 
     .nativechat-launcher-icon-open {
-      /* background: url("./chat-open.svg") center no-repeat; */
       background: url("assets/images/chatbot.png") center no-repeat;
       background-color: rgba(0, 0, 0, 0);
       background-size: auto;
       background-size: contain;
-      /* background-color: plum; */
-      color: yellow;
     }
+
     .nativechat-launcher-icon-close {
-  background: url("assets/images/close-button.png") center no-repeat;
-    background-size: auto;
-  background-size: contain;
-  display: none;
-}
+      background: url("assets/images/close-button.png") center no-repeat;
+      background-size: auto;
+      background-size: contain;
+      display: none;
+    }
   </style>
 </head>
 
@@ -53,8 +52,10 @@
   <app-root></app-root>
 
 
-<!-- ----slider---- -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+  <!-- ----slider---- -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
 
 
   <!-- chatbot -->
